--- a/src/App.css
+++ b/src/App.css
@@ -85,3 +85,19 @@ select {
   border-radius: 3px;
   width: 100%;
 }
+
+.filter, .search{
+  border-bottom: 1px solid #555;
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+}
+
+.filter-option{
+  display: flex;
+  justify-content: space-between;
+  gap:3rem;
+}
+
+.filter-option-div{
+  flex: 1 0 0;
+}
