--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -3,7 +3,7 @@ body {
   background-color: #f4f4f4;
   padding: 30px;
   color: #333;
-  background-image: url(./img/Leonardo_Vision_XL_A_droneseye_view_of_a_futuristic_metropolis_1.jpg);
+  background-image: url(../img/Leonardo_Vision_XL_A_droneseye_view_of_a_futuristic_metropolis_1.jpg);
   background-position: center;
   background-size: cover;
 }
@@ -48,27 +48,6 @@ button:hover {
   opacity: 1;
 }
 
-.todo-map {
-  margin-bottom: 20px;
-  padding-bottom: 20px;
-  border-bottom: 1px solid #555;
-}
-
-.todo {
-  background-color: #fff;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  padding: 10px;
-  margin-bottom: 10px;
-  border-radius: 5px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.todo-form {
-  padding-bottom: 1.5rem;
-}
-
 .complete {
   background-color: #5cb85c;
 }
@@ -77,8 +56,7 @@ button:hover {
   background-color: #d0534f;
 }
 
-input,
-select {
+input{
   padding: 5px;
   margin-bottom: 10px;
   border: 1px solid #ddd;
